# pm-context-kit

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.en.md  README.md
adapters/claude/: claude_desktop_config.example.json
adapters/codex/: mcp.example.toml
config/: repos.example.yaml  visibility.example.yaml
deploy/: docker-compose.yaml
server/: Dockerfile  pyproject.toml
server/src/code_context_mcp/: __init__.py  server.py
skills/claude/code-context/: SKILL.md
skills/codex/code-context/: SKILL.md
skills/codex/code-context/agents/: openai.yaml
sync/: Dockerfile  pyproject.toml
sync/src/code_context_sync/: __init__.py  sync_once.py
